--- a/hawkes.html
+++ b/hawkes.html
@@ -11,7 +11,7 @@
 
     <meta name="description" content="Developer, Designer, and Student">
 
-    <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
+    <meta property="og:title" content="Jacob Frank; Developer, Designer, and Student">
     <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://jacobdfrank.com/media/social.png">
@@ -79,7 +79,7 @@
 
 <body>
     <div class="top__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page3">Back</a></p>
+        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../#page3">Back</a></p>
         <div class="top__link__line__container">
             <div class="top__link__line"></div>
         </div>
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page4">Next Project</a></p>
+        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../#page4">Next Project</a></p>
         <div class="bottom__link__line__container">
             <div class="bottom__link__line--case"></div>
         </div>
@@ -128,10 +128,10 @@
             </div>
             <div class="case__info">
                 <div class="casestudy__container">
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/newHMGSite.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Understanding the Brand</h2>
                         <p class="roboto--regular fluid-type14-20">
                             Hawkes Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to complete it.<br><br>Hawkes
@@ -139,10 +139,10 @@
                             complete it.
                         </p>
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Assessing the Problem</h2>
                         <p class="roboto--regular fluid-type14-20">
                             Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding of what a digital media company needs on a site and who they wanted to attract
@@ -150,56 +150,56 @@
                             of what a digital media company needs on a site and who they wanted to attract to the site.
                         </p>
                     </div>
-                    <div class="casestudy__row column col-6">
+                    <div class="casestudy__row--image column col-12">
                         <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
                         <p class="roboto--regular fluid-type14-20">
                             I created sketches on paper of a simple interface with a consistent layout. Then I created wireframes for each page. I also used a mind map and information architecture I’d created to guide me along the way.
                         </p>
                     </div>
-                    <div class="casestudy__row column col-6">
+                    <div class="casestudy__row--image column col-12">
                         <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png" class="casestudy__image">
                     </div>
 
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <p class="roboto--regular fluid-type14-20">
                             Hawkes Media supplied a text-based list of clients for one page, but I convinced them that company logos are a stronger visual presentation. It gives the prospective client more confidence in their work when you see a full screen of logos. In addition,
                             I also got them to reduce some of the text they envisioned in favor of more imagery. After all, they are a media company. Show your best work instead of writing about it.
                         </p>
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png" class="casestudy__image">
                     </div>
 
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <p class="roboto--regular fluid-type14-20">
                             Once the wireframes were finished I made a low-fidelity prototype and showed it to the client for feedback. This was followed by higher fidelity wireframes. Taking all these steps made for fewer changes as we moved ahead because the feedback helped me
                             remove what the client didn’t like. The triangles and diagonal styling I used on the header and footer to give the site more character were stripped away and the Merriweather font was changed to a more plain and modern looking
                             Open Sans typeface.
                         </p>
                     </div>
-                    <div class="casestudy__row column col-6">
+                    <div class="casestudy__row--image column col-12">
                         <img src="https://taw.imgix.net/taw2016Site/hmg-work.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Coding</h2>
                         <p class="roboto--regular fluid-type14-20">
                             During the development of the site I found a way to give the client access to a CMS so that they could collaborate and make minor changes using Webflow. The project was developed using custom code that I would paste into the Webflow editor along with
                             editor itself for a couple smaller things. CSS Flexbox was used for most of the site and it saved a lot of time with layout. JQuery was also used on some items like the mobile navigation.
                         </p>
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Check it Out</h2>
                         <p class="roboto--regular fluid-type14-20">
                             The current website can be seen <a class="nolink__decoration link__name__color" href="http://www.hawkesmediagroup.com/">here</a>.
                         </p>
-                    </div>
-                    <div class="casestudy__row">
                         <p class="roboto--regular fluid-type14-20">
                             The old site's homepage
                         </p>
+                    </div>
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
