--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <meta name="description" content="Developer, Designer, and Student">
 
-    <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
+    <meta property="og:title" content="Jacob Frank; Developer, Designer, and Student">
     <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://jacobdfrank.com/media/social.png">
