--- a/seo.html
+++ b/seo.html
@@ -11,7 +11,7 @@
 
     <meta name="description" content="Developer, Designer, and Student">
 
-    <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
+    <meta property="og:title" content="Jacob Frank; Developer, Designer, and Student">
     <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://jacobdfrank.com/media/social.png">
@@ -79,7 +79,7 @@
 
 <body>
     <div class="top__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page3">Back</a></p>
+        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../#page3">Back</a></p>
         <div class="top__link__line__container">
             <div class="top__link__line"></div>
         </div>
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page4">Next Project</a></p>
+        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../#page4">Next Project</a></p>
         <div class="bottom__link__line__container">
             <div class="bottom__link__line--case"></div>
         </div>
@@ -127,18 +127,17 @@
             </div>
             <div class="case__info">
                 <div class="casestudy__container">
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Learning where to go</h2>
                         <p class="roboto--regular fluid-type14-20">
                             The site is a ‘job board’ and information hub for on-campus employers and students. <br><br> After understanding the goal for the site, I realized I needed to know more about the site’s users. Using Google analytics, I could
                             see the most obvious user pain points: poor navigation, confusing hierarchy, and too many clicks needed to get to the user’s end goal. I needed to streamline the user’s path.
-                            <br>
-                            <br> After understanding the goal for the site, I realized I needed to know more about the site’s users. Using Google analytics, I could see the most obvious user pain points: poor navigation, confusing hierarchy, and too many
-                            clicks needed to get to the user’s end goal. I needed to streamline the user’s path.After understanding the goal for the site, I realized I needed to know more about the site’s users. Using Google analytics, I could see the
-                            most obvious user pain points: poor navigation, confusing hierarchy, and too many clicks needed to get to the user’s end goal. I needed to streamline the user’s path.
                         </p>
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--image">
+                        <img src="https://taw.imgix.net/taw2016Site/seo_sketches.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Sketching</h2>
                         <p class="roboto--regular fluid-type14-20">
                             I made many iterations for each page, identifying the content and goal. This process brought to light additional user pain points. One such problem dealt with how much information the user had to weed through. A search function wouldn’t be helpful since
@@ -146,20 +145,23 @@
                             rate.
                         </p>
                     </div>
-                    <div class="casestudy__row">
-                        <img src="https://taw.imgix.net/taw2016Site/seo_sketches.png" class="casestudy__image">
+
+                    <div class="casestudy__row--text column col-12">
                         <p class="roboto--regular fluid-type14-20">After all this was done I shrank the site’s theoretical footprint from 20+ pages to about 6.</p>
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--image column col-12">
+                        <img src="https://taw.imgix.net/taw2016Site/seo_homepage.png" class="casestudy__image">
+                    </div>
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Wireframes</h2>
                         <p class="roboto--regular fluid-type14-20">
                             To begin the wireframes, I laid out the sketches for each specific page. I used a list of references compiled during the research stage and then opened Sketch.
                         </p>
                     </div>
-                    <div class="casestudy__row column col-6">
-                        <img src="https://taw.imgix.net/taw2016Site/seo_homepage.png" class="casestudy__image">
+                    <div class="casestudy__row--image column col-12">
+                        <img src="https://taw.imgix.net/taw2016Site/seo_verify.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
                         <p class="roboto--regular fluid-type14-20">
                             Currently, I’ve completed only one mid-fidelity wireframe for the site. My goal for the homepage is to explain the student employment office and what users can do and find on the site. I’ve added important contact information, helpful call to actions,
@@ -167,16 +169,14 @@
                             jobs link will decrease the time it takes for the user to find what they want.
                         </p>
                     </div>
-                    <div class="casestudy__row column col-6">
-                        <img src="https://taw.imgix.net/taw2016Site/seo_verify.png" class="casestudy__image">
-                    </div>
 
-                    <div class="casestudy__row column col-12">
+
+                    <div class="casestudy__row--text column col-12">
                         <p class="roboto--regular fluid-type14-20">
                             There likely won’t be 6 social media icons and various links on the navigation bar may be changed. Copy for each page isn’t finalized.
                         </p>
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Next Steps</h2>
                         <p class="roboto--regular fluid-type14-20">
                             I plan on finishing all the mid-fidelity wireframes in the coming weeks. After the wires are done a mid-fidelity prototype will be made using Craft (by Invision) in Sketch.
