--- a/webgl.html
+++ b/webgl.html
@@ -11,7 +11,7 @@
 
     <meta name="description" content="Developer, Designer, and Student">
 
-    <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
+    <meta property="og:title" content="Jacob Frank; Developer, Designer, and Student">
     <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://jacobdfrank.com/media/social.png">
@@ -79,7 +79,7 @@
 
 <body>
     <div class="top__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page3">Back</a></p>
+        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../#page3">Back</a></p>
         <div class="top__link__line__container">
             <div class="top__link__line"></div>
         </div>
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page3">Next Project</a></p>
+        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../#page3">Next Project</a></p>
         <div class="bottom__link__line__container">
             <div class="bottom__link__line--case"></div>
         </div>
@@ -115,12 +115,11 @@
                         </div>
                         <div class="column col-10 case__description__hr--pushDown">
                             <p class="first roboto--regular fluid-type14-20">
-                                Learn new skills. Currently, much of my time has been spent with Three.js. But, I’ve also experimented with the web audio API and p5.js.
+                                Learn new skills. Currently, much of my time has been spent with Three.js. But, I’ve also experimented with the web audio API and p5.js. Some stills &amp; demos are below.
                             </p>
                         </div>
                         <div class="column col-2 case__info__hr--pushDown">
                             <p class="roboto--regular fluid-type14-20">Summer of 2016</p>
-                            <p class="roboto--regular fluid-type14-20">Some stills and demos are below</p>
                         </div>
                         <hr class="case__hr">
                     </div>
@@ -128,37 +127,37 @@
             </div>
             <div class="case__info">
                 <div class="casestudy__container">
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/spread.JPG?w=1&h=1" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row">
-                        <p data-height="609" data-theme-id="light" data-slug-hash="apJZzb" data-default-tab="css,result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="Spread" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/apJZzb/">Spread</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                    <div class="casestudy__row--image">
+                        <p data-height="656" data-theme-id="light" data-slug-hash="apJZzb" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="Spread" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/apJZzb/">Spread</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
                         <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">About</h2>
                         <p class="roboto--regular fluid-type14-20">
                             I began this work as a way to fill my spare time with new challenges. In the end, I may have spent several weeks working on this little experiment, creating 40+ pieces of content. It was inspired by creatives like Beeple as well as friends like Luka Schulz
                             who confronted a similar challenge. <br><br>Please look at some of my work I’ve created. Some are bonafide failures, most are not. After all, you learn the most from failure, right?
                         </p>
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/particleCreator.jpg?w=1&h=1" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/shadowBox.jpg?w=1&h=1" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row">
-                        <p data-height="265" data-theme-id="light" data-slug-hash="oBZYXV" data-default-tab="js,result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="fragmentShader-One" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/oBZYXV/">fragmentShader-One</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
-                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js" ></script>
+                    <div class="casestudy__row--image">
+                        <p data-height="656" data-theme-id="light" data-slug-hash="oBZYXV" data-default-tab="result" data-user="JacobDFrank" data-embed-version="2" data-pen-title="fragmentShader-One" class="codepen">See the Pen <a href="http://codepen.io/JacobDFrank/pen/oBZYXV/">fragmentShader-One</a> by Jacob D Frank (<a href="http://codepen.io/JacobDFrank">@JacobDFrank</a>) on <a href="http://codepen.io">CodePen</a>.</p>
+                        <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/face.jpg?w=1&h=1" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/cones.png?w=1&h=1" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/blackHole.jpg?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
