--- a/taw.html
+++ b/taw.html
@@ -11,7 +11,7 @@
 
     <meta name="description" content="Developer, Designer, and Student">
 
-    <meta property="og:title" content="Jacob Frank Developer, Designer, and Student">
+    <meta property="og:title" content="Jacob Frank; Developer, Designer, and Student">
     <meta property="og:description" content="Developer, Designer, and Student at RIT">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://jacobdfrank.com/media/social.png">
@@ -79,7 +79,7 @@
 
 <body>
     <div class="top__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page2">Back</a></p>
+        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../#page2">Back</a></p>
         <div class="top__link__line__container">
             <div class="top__link__line"></div>
         </div>
@@ -93,7 +93,7 @@
         </div>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../index.html/#page3">Next Project</a></p>
+        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../#page3">Next Project</a></p>
         <div class="bottom__link__line__container">
             <div class="bottom__link__line--case"></div>
         </div>
@@ -128,10 +128,10 @@
             </div>
             <div class="case__info">
                 <div class="casestudy__container">
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/HomeImage.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">About</h2>
                         <p class="roboto--regular fluid-type14-20">
                             I’ve been involved with the ‘Thought At Work’ design conference for nearly two years in several roles, including work on the core conference team, contacting speakers, helping create installations, and most recently, building the website. <br><br>In
@@ -139,45 +139,45 @@
                             I developed most of the site at first. As other people came on board, I took on a additional managerial role for the entire website and became the lead for the project.
                         </p>
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/HistoryImage.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/RecapImage.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Responsivity</h2>
                         <p class="roboto--regular fluid-type14-20">
                             At first we were only given desktop mocks for the site. Two months later we got a mobile mock of the homepage. Without a tablet mock I translated the desktop site to tablet and mobile without compromising the original style and flow of the site content.
                             From a visual perspective the site lost some of its more interesting aspects. But it retained much of the way the content was laid out and that’s what mattered most.
                         </p>
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/mobileScreens.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/Ipad_screen.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Performance</h2>
                         <p class="roboto--regular fluid-type14-20">
                             We encountered another challenge very close to the start of the conference. We were given headshots to create a volunteer/team section on the ‘about’ page. We had to display dozens of people with their name and major without losing much performance and
                             load time.
                         </p>
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/team.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row column col-12">
+                    <div class="casestudy__row--text column col-12">
                         <p class="roboto--regular fluid-type14-20">
                             To solve this issue, some JavaScript was written, relying on Imgix, an image compression API, to inject each headshot and appropriate text into the HTML. This compressed the images to a much smaller size without causing performance issues and compromising
                             the resolution.
                         </p>
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/history.png" class="casestudy__image">
                     </div>
-                    <div class="casestudy__row">
+                    <div class="casestudy__row--image">
                         <img src="https://taw.imgix.net/taw2016Site/food.png" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
