Fixed next project and eliminated website soon

--- a/about.html
+++ b/about.html
@@ -77,37 +77,37 @@
     </script>
 </head>
 
-<body>
+<body class="body__about">
     <div class="top__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color" href="../#page4">Back</a></p>
+        <p class="fluid-type24-44 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color__about" href="../#page3">Back</a></p>
         <div class="top__link__line__container">
-            <div class="top__link__line"></div>
+            <div class="top__link__line__about"></div>
         </div>
     </div>
-    <div class="nav">
+    <div class="nav__about">
         <div class="nav__wrapper nav--left nav--transform">
-            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com/media/Jacob_Frank_Resume.pdf" target="_blank"> Resume</a> </p>
+            <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="http://www.jacobdfrank.com" target="_blank"> Home</a> </p>
         </div>
         <div class="nav__wrapper nav--transformRight nav--right">
             <p class="fluid-type14-20 roboto--regular link"> <a class="nolink__decoration" href="mailto:hello@jacobdfrank.com?subject=Jacob, let’s talk"> Email</a> </p>
         </div>
     </div>
     <div class="bottom__link link index--rise1">
-        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color" href="../#page5">Next Project</a></p>
+        <p class="fluid-type14-20 roboto--regular center__link__name"> <a class="nolink__decoration link__name__color__about" href="../#page4">Next Project</a></p>
         <div class="bottom__link__line__container">
-            <div class="bottom__link__line--case"></div>
+            <div class="bottom__link__line--case__about"></div>
         </div>
     </div>
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
             <div class="case__cover">
-                <img src="img/hawkesProjectCoverCropped.jpeg" class="case__cover__image">
-                <div class="case__cover__content">
-                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed"> Hawkes Media Group</h1>
-                    <h4 class="fluid-type14-20 roboto--medium">- Front-End, UX, UI</h4>
+                <img src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg" class="case__cover__image__about">
+                <div class="case__cover__content__about">
+                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed">Hello,
+I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need them most.</h1>
                 </div>
             </div>
-            <div class="case__info">
+            <div class="case__info__about">
                 <div class="case__info__container">
                     <div class="case__info__row">
                         <div class="column col-12">
@@ -193,7 +193,7 @@
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Check it Out</h2>
                         <p class="roboto--regular fluid-type14-20">
-                            The current website can be seen <a class="nolink__decoration link__name__color" href="http://www.hawkesmediagroup.com/">here</a>.
+                            The current website can be seen <a class="nolink__decoration link__name__color__about" href="http://www.hawkesmediagroup.com/">here</a>.
                         </p>
                         <p class="roboto--regular fluid-type14-20">
                             The old site's homepage
