did imgix for each photo

--- a/hawkes.html
+++ b/hawkes.html
@@ -129,7 +129,7 @@
             <div class="case__info">
                 <div class="casestudy__container">
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/newHMGSite.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/newHMGSite.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Understanding the Brand</h2>
@@ -140,7 +140,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Assessing the Problem</h2>
@@ -151,7 +151,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
@@ -160,7 +160,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png?w=1&h=1" class="casestudy__image">
                     </div>
 
                     <div class="casestudy__row--text column col-12">
@@ -170,7 +170,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png?w=1&h=1" class="casestudy__image">
                     </div>
 
                     <div class="casestudy__row--text column col-12">
@@ -181,7 +181,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg-work.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg-work.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Coding</h2>
@@ -200,7 +200,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
