--- a/taw.html
+++ b/taw.html
@@ -129,7 +129,7 @@
             <div class="case__info">
                 <div class="casestudy__container">
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/HomeImage.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HomeImage.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">About</h2>
@@ -140,10 +140,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/HistoryImage.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HistoryImage.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/RecapImage.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/RecapImage.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Responsivity</h2>
@@ -153,10 +153,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/mobileScreens.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/mobileScreens.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/Ipad_screen.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/Ipad_screen.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Performance</h2>
@@ -166,7 +166,7 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/team.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/team.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <p class="roboto--regular fluid-type14-20">
@@ -175,10 +175,10 @@
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/history.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/history.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/food.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/food.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
