--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
             <div class="case__cover">
-                <img src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg" class="case__cover__image__about">
+                <img src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg?w=1&h=1" class="case__cover__image__about">
                 <div class="case__cover__content__about">
                     <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed">Hello,
 I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need them most.</h1>
@@ -129,7 +129,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
             <div class="case__info">
                 <div class="casestudy__container">
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/newHMGSite.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/newHMGSite.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Understanding the Brand</h2>
@@ -140,7 +140,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Assessing the Problem</h2>
@@ -151,7 +151,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
@@ -160,7 +160,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png?w=1&h=1" class="casestudy__image">
                     </div>
 
                     <div class="casestudy__row--text column col-12">
@@ -170,7 +170,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png?w=1&h=1" class="casestudy__image">
                     </div>
 
                     <div class="casestudy__row--text column col-12">
@@ -181,7 +181,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                         </p>
                     </div>
                     <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg-work.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/hmg-work.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__row--text column col-12">
                         <h2 class="roboto--bold fluid-type14-20">Coding</h2>
@@ -200,7 +200,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                         </p>
                     </div>
                     <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png" class="casestudy__image">
+                        <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png?w=1&h=1" class="casestudy__image">
                     </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
