Fixed link system

--- a/hawkes.html
+++ b/hawkes.html
@@ -122,7 +122,7 @@
                         </div>
                         <div class="column col-2 case__info__hr--pushDown">
                             <p class="roboto--regular fluid-type14-20">2 Weeks, January 2017</p>
-                            <p class="roboto--regular fluid-type14-20"><a href="http://www.hawkesmediagroup.com/" class="no-route" target="_blank">Visit Website</a></p>
+                            <p class="roboto--regular fluid-type14-20"><a href="http://www.hawkesmediagroup.com/" target="_blank">Visit Website</a></p>
                         </div>
                         <hr class="case__hr">
                     </div>
