--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
 
     <meta name="author" content="Jacob Frank">
 
+
     <title>Jacob Frank Developer &amp; Designer</title>
 
     <link rel="stylesheet" href="css/style.css">
@@ -122,7 +123,7 @@ I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Ro
                         </div>
                         <div class="column col-2 case__info__hr--pushDown">
                             <p class="roboto--regular fluid-type14-20">2 Weeks, January 2017</p>
-                            <p class="roboto--regular fluid-type14-20"><a href="http://www.hawkesmediagroup.com/" class="no-route" target="_blank">Visit Website</a></p>
+                            <p class="roboto--regular fluid-type14-20"><a href="http://www.hawkesmediagroup.com/" target="_blank">Visit Website</a></p>
                         </div>
                         <hr class="case__hr">
                     </div>
