--- a/taw.html
+++ b/taw.html
@@ -122,7 +122,7 @@
                         </div>
                         <div class="column col-2 case__info__hr--pushDown">
                             <p class="roboto--regular fluid-type14-20">October 2016 </p>
-                            <p class="roboto--regular fluid-type14-20"><a href="http://thoughtatwork.cias.rit.edu/" class="no-route" target="_blank">Visit Website</a></p>
+                            <p class="roboto--regular fluid-type14-20"><a href="http://thoughtatwork.cias.rit.edu/" target="_blank">Visit Website</a></p>
                         </div>
                         <hr class="case__hr">
                     </div>
