added comments to stuff

--- a/school/IGME590/index.html
+++ b/school/IGME590/index.html
@@ -47,6 +47,9 @@
             <p class="description">Displayed in most recent order.</p>
             <ul>
                 <li>
+                    <a href="assignments/CyclicAutomata" target="_blank">Cyclic Automata(2Ds)</a>
+                </li>
+                <li>
                     <a href="assignments/soundAdaptation" target="_blank">Sound Mod</a>
                 </li>
                 <li>
