--- a/about.html
+++ b/about.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/page.css">
     <link rel="stylesheet" href="css/case.css">
+    <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/polyfill.object-fit.css">
     <link rel="stylesheet" type="text/css" href="css/jquery.fullPage.css" />
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
@@ -47,7 +48,21 @@
     <script type="text/javascript" src="js/jquery.fullPage.min.js"></script>
     <!-- <script type="text/javascript" src="js/VirtualScroll.js"></script> -->
     <script type="text/javascript" src="js/jquery.fullpage.extensions.min.js"></script>
-
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-96615084-1', 'auto');
+        ga('send', 'pageview');
+    </script>
     <script>
         (function(d) {
             var config = {
