--- a/about.html
+++ b/about.html
@@ -36,7 +36,6 @@
     <title>Jacob Frank Developer &amp; Designer</title>
 
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/page.css">
     <link rel="stylesheet" href="css/case.css">
     <link rel="stylesheet" href="css/about.css">
     <link rel="stylesheet" href="css/polyfill.object-fit.css">
@@ -96,11 +95,9 @@
 </head>
 
 <body class="body__about">
-    <div class="top__link link index--rise1">
-        <p class="fluid-type24-44 roboto--regular top__link__name center__link__name"> <a class="nolink__decoration link__name__color__about" href="../#page3">Back</a></p>
-        <div class="top__link__line__container">
-            <div class="top__link__line__about"></div>
-        </div>
+    <div class="homepage__text homepage__text--about">
+        <p class="fluid-type24-44 myriad-pro-condensed homepage__name projects__name index--rise1"><a href="index.html">JACOB FRANK</a></p>
+        <p class="fluid-type12x-16 roboto--regular projects__subhead index--rise1"><a href="index.html">Developer &amp; Designer</a></p>
     </div>
     <div class="nav__about">
         <div class="nav__wrapper nav--left nav--transform">
@@ -118,108 +115,34 @@
     </div>
     <div id="fullpage" onscroll="getScrollPosition()">
         <div class="section">
-            <div class="case__cover">
+            <div class="case__cover__about">
                 <img src="http://thoughtatwork.cias.rit.edu/img/taw2016Site/aboutPhotoCrop.jpg?w=1&h=1" class="case__cover__image__about">
                 <div class="case__cover__content__about">
-                    <h1 class="project__cover__content__title fluid-type24-100 myriad-pro-condensed">Hello,
-I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need them most.</h1>
+                    <h1 class="project__cover__content__title fluid-type24-44 myriad-pro-condensed">Hello, <br>
+I’m Jacob Frank, a Creative Developer, Designer and 2nd year student at the Rochester Institute of Technology. My goal is to make visually appealing websites and design and craft products for the people that need&nbsp;them&nbsp;most.</h1>
                 </div>
             </div>
             <div class="case__info__about">
-                <div class="case__info__container">
-                    <div class="case__info__row">
-                        <div class="column col-12">
-                            <h2 class="roboto--bold fluid-type14-20">Goal</h2>
-                        </div>
-                        <div class="column col-10 case__description__hr--pushDown">
+                <div class="case__info__container case__info__container__about">
+                    <div class="case__info__row case__info__row__about">
+                        <div class="column col-12 case__description__hr--pushDown">
                             <p class="first roboto--regular fluid-type14-20">
-                                Tasked with redesigning a website that hadn’t been updated in more than a decade, filled with flash animations and gratuitous geocities gifs.
+                                I want to solve problems and It’s less about the people who are looking ahead to the next smartphone, but how families will be able to put food on their table.
+                                <br><br> I’ve been a creative since I was young. I started with LEGO bricks, and moved on to Halo 3’s map maker before graduating to professional design tools, text editors, and notepads.
+                                <br><br> Having the ability to develop and design solutions is empowering. It’s the real world impact that matters, not the digital one. And right now I’m learning the skills I need to make that happen.
+                                <br><br> And hey, I’m looking for an internship this summer.
+                                <br><br> hello@jacobdfrank.com
                             </p>
+                            <div class="casestudy__row--image">
+                                <img src="https://taw.imgix.net/taw2016Site/meWithLegos.JPG?w=1&h=1" class="casestudy__image">
+                            </div>
                         </div>
-                        <div class="column col-2 case__info__hr--pushDown">
-                            <p class="roboto--regular fluid-type14-20">2 Weeks, January 2017</p>
-                            <p class="roboto--regular fluid-type14-20"><a href="http://www.hawkesmediagroup.com/" target="_blank">Visit Website</a></p>
-                        </div>
-                        <hr class="case__hr">
                     </div>
                 </div>
             </div>
-            <div class="case__info">
+            <div class="case__info case__info__about">
                 <div class="casestudy__container">
-                    <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/newHMGSite.png?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row--text column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Understanding the Brand</h2>
-                        <p class="roboto--regular fluid-type14-20">
-                            Hawkes Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to complete it.<br><br>Hawkes
-                            Media Group is a full-service digital media production company based near Boston, Massachusetts. Their need for a new website was urgent. One of their staff tried to create a new website 6 months earlier, but was too busy to
-                            complete it.
-                        </p>
-                    </div>
-                    <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg__final__about.png?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row--text column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Assessing the Problem</h2>
-                        <p class="roboto--regular fluid-type14-20">
-                            Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding of what a digital media company needs on a site and who they wanted to attract
-                            to the site. <br><br> Compared to their old, busy-looking site, the client wanted to showcase their work in a much simpler, direct and focused way. The first thing I did was gain an understanding
-                            of what a digital media company needs on a site and who they wanted to attract to the site.
-                        </p>
-                    </div>
-                    <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg_sketches.png?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row--text column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Designing the Site</h2>
-                        <p class="roboto--regular fluid-type14-20">
-                            I created sketches on paper of a simple interface with a consistent layout. Then I created wireframes for each page. I also used a mind map and information architecture I’d created to guide me along the way.
-                        </p>
-                    </div>
-                    <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/homepage__wires.png?w=1&h=1" class="casestudy__image">
-                    </div>
 
-                    <div class="casestudy__row--text column col-12">
-                        <p class="roboto--regular fluid-type14-20">
-                            Hawkes Media supplied a text-based list of clients for one page, but I convinced them that company logos are a stronger visual presentation. It gives the prospective client more confidence in their work when you see a full screen of logos. In addition,
-                            I also got them to reduce some of the text they envisioned in favor of more imagery. After all, they are a media company. Show your best work instead of writing about it.
-                        </p>
-                    </div>
-                    <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg-contact.png?w=1&h=1" class="casestudy__image">
-                    </div>
-
-                    <div class="casestudy__row--text column col-12">
-                        <p class="roboto--regular fluid-type14-20">
-                            Once the wireframes were finished I made a low-fidelity prototype and showed it to the client for feedback. This was followed by higher fidelity wireframes. Taking all these steps made for fewer changes as we moved ahead because the feedback helped me
-                            remove what the client didn’t like. The triangles and diagonal styling I used on the header and footer to give the site more character were stripped away and the Merriweather font was changed to a more plain and modern looking
-                            Open Sans typeface.
-                        </p>
-                    </div>
-                    <div class="casestudy__row--image column col-12">
-                        <img src="https://taw.imgix.net/taw2016Site/hmg-work.png?w=1&h=1" class="casestudy__image">
-                    </div>
-                    <div class="casestudy__row--text column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Coding</h2>
-                        <p class="roboto--regular fluid-type14-20">
-                            During the development of the site I found a way to give the client access to a CMS so that they could collaborate and make minor changes using Webflow. The project was developed using custom code that I would paste into the Webflow editor along with
-                            editor itself for a couple smaller things. CSS Flexbox was used for most of the site and it saved a lot of time with layout. JQuery was also used on some items like the mobile navigation.
-                        </p>
-                    </div>
-                    <div class="casestudy__row--text column col-12">
-                        <h2 class="roboto--bold fluid-type14-20">Check it Out</h2>
-                        <p class="roboto--regular fluid-type14-20">
-                            The current website can be seen <a class="nolink__decoration link__name__color__about" href="http://www.hawkesmediagroup.com/">here</a>.
-                        </p>
-                        <p class="roboto--regular fluid-type14-20">
-                            The old site's homepage
-                        </p>
-                    </div>
-                    <div class="casestudy__row--image">
-                        <img src="https://taw.imgix.net/taw2016Site/HMG__homepage--old__screencap.png?w=1&h=1" class="casestudy__image">
-                    </div>
                     <div class="casestudy__emptyBlock casestudy__row">
                     </div>
                 </div>
